css/style.css
@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Work+Sans&display=swap");
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

img {
  width: 100%;
}

body {
  width: 100%;
  height: 100vh;
  background-image: url(https://images.pexels.com/photos/4761352/pexels-photo-4761352.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
}

.cHeader {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}
.cHeader .cHeader__logo {
  width: 135px;
  margin-bottom: 1.5rem;
}
.cHeader .cHeader__arroba {
  color: #ffffff;
  font-family: "Bebas Neue", sans-serif;
  font-size: 20px;
  text-shadow: 0px 0px 15px rgba(0, 0, 0, 0.6980392157);
}

.cMain {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}
.cMain .cMain__btn {
  font-size: 20px;
  font-family: "Bebas Neue", sans-serif;
  width: 310px;
  background-color: rgba(148, 147, 147, 0.568627451);
  border: none;
  border-radius: 50px;
  text-align: center;
  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.6980392157);
  text-shadow: 0px 0px 15px rgba(0, 0, 0, 0.6980392157);
  position: relative;
}
.cMain .cMain__btn .cMain__ico {
  width: 25px;
  padding-top: 3px;
  position: absolute;
  right: 5%;
}
.cMain .cMain__collapse {
  width: 275px;
  background-color: rgba(148, 147, 147, 0.568627451);
  margin-bottom: 30px;
  border-radius: 10px;
  border: none;
}
.cMain .cMain__collapse a {
  text-decoration: none;
  color: #ffffff;
  font-family: "Bebas Neue", sans-serif;
  font-size: 20px;
  line-height: 2rem;
  text-shadow: 0px 0px 15px rgba(0, 0, 0, 0.6980392157);
}
.cMain .cMain__icoInsta {
  width: 45px;
}

.cFooter {
  color: #ffffff;
  text-align: center;
  font-family: "Work Sans", sans-serif;
  font-size: 12px;
}
.cFooter a {
  color: darkgray;
}

/*# sourceMappingURL=style.css.map */

